1999-10-11  James Henstridge  <james@daa.com.au>

	* objects/flowchart/document.shape: a shape file for the `document'
	flowchart shape.

	* lib/custom.h: new header with the custom shape prototypes.

	* app/app_procs.c: register custom objects as well.
	(register_objects_in): close shared libraries if they don't load
	correctly, and call g_module_make_resident on libraries that load
	correctly.

	* app/Makefile.am (dia_LDADD): added libcustom_objects.a to link list.

	* objects/custom/custom.c: removed get_version, added custom_ prefix
	to register_objects and register_sheets.

	* objects/custom/Makefile.am: converted to a normal library.

1999-10-10  Alexander Larsson  <alla@lysator.liu.se>

	* app/lineprops_area.c:
	* app/render_svg.c:
	* lib/objchange.c:
	* objects/custom/shape_info.c:
	* objects/flowchart/box.c:
	* objects/flowchart/diamond.c:
	* objects/flowchart/ellipse.c:
	* objects/flowchart/parallelogram.c:
	* objects/network/flash.c:
	* objects/network/scead-plug.c:
	* objects/sybase/client.c:
	Removed -Wall warnings.
	
	* objects/network/bus.c:
	Removed unused functions.

	* objects/FS/flow-ortho.c:
	* objects/FS/flow-poly.c:
	* objects/FS/flow.c:
	* objects/FS/function.c:
	
	Implemented "non-implemented" undo for FS objects.
	Now at least it won't crash.
	
1999-10-10  Alexander Larsson  <alla@lysator.liu.se>

	* objects/network/bus.c:
	Implemented undo.
	Handles are now added and removed using the object menu.
	Default to 6 handles instead of 10.
	Changed name from "Standard - Bus" to "Network - Bus". Kept old
	name for backwards compatibility.

	* objects/network/network.c:
	Changed name from "Standard - Bus" to "Network - Bus". Kept old
	name for backwards compatibility.

	* app/properties.[ch]:
	* app/undo.c:
	Update properties in properties dialog if the shown object
	is part of and ObjectChange (undo or redo).

	* lib/poly_conn.c:
	Remove old known bugs list.

	* objects/UML/class_dialog.c:
	Removed debug printf's.
